# rUNSWift-2025-release

./: .clangd  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml
.devcontainer/: README  devcontainer.json  (+2 more)
desktop_ws/sim/isaacsim/: README.md  package.xml  setup.py
desktop_ws/sim/isaacsim/isaacsim/: isaacsim_bridge.py
desktop_ws/sim/isaacsim/launch/: isaacsim_launch.py
robot_ws/src/behaviours/: package.xml  setup.cfg  setup.py
robot_ws/src/behaviours/launch/: behaviours.launch.py
robot_ws/src/behaviours/src/: BehaviourNode.py  Blackboard.py  Controller.py
robot_ws/src/behaviours/src/datamodels/: RobotPose.py
robot_ws/src/behaviours/src/skills/: Skill.py
robot_ws/src/behaviours/src/skills/debug_skills/: MapTeleop.py
robot_ws/src/behaviours/src/skills/head_skills/: HeadLookStraight.py  HeadNod.py  HeadScanBall.py  HeadScanBallGoalie.py  HeadTrackBallPixel.py  SeHeadTrackBall.py
robot_ws/src/behaviours/src/skills/leaf_skills/: Dive.py  Kick.py  Sit.py  Stand.py  Walk.py
robot_ws/src/behaviours/src/skills/main_skills/: ApproachBall.py  BallAdjustment.py  CheckRef.py  Demo.py  FollowBall.py  GoalieKick.py  KickOffSetPlay.py  Kickin.py  Kickoff.py  Lineup.py  Playing.py  Ready.py  SideStepInCircle.py  SoloFindBall.py  Template.py  WalkInCircle.py  WalkToPoint.py  WalkToPose.py
robot_ws/src/behaviours/src/skills/roles/: Attacker.py  Defender.py  Goalie.py  Midfielder.py
robot_ws/src/behaviours/src/utils/: Ball.py  Constants.py  FieldCheck.py  FieldGeometry.py  Hysteresis.py  MathUtil.py  TeamInfo.py  Timer.py
robot_ws/src/behaviours/test/: test_base_skill.py  test_behaviour_node_setup.py  test_blackboard.py  test_controller.py  test_runner.py  test_sit_skill.py  test_timer_util.py  test_walk_skill.py
robot_ws/src/comms/: CMakeLists.txt  package.xml
robot_ws/src/comms/include/comms/: GameInfo.hpp  RobotCommunication.hpp
robot_ws/src/comms/launch/: comms.launch.py
robot_ws/src/comms/src/: GameInfo.cpp  RobotCommunication.cpp  game_controller_publisher.py  game_controller_spl.py  ggwaveReceiver.py  ggwaveSpeaker.py  player_number.py  robot_communication_publisher.py  whistle_detector.py  whistle_detector_functions.py
robot_ws/src/comms/src/rcgcd/: conversion.py  robocup_game_control_data.py
robot_ws/src/comms/src/rcgcrd/: conversion.py  robocup_game_control_return_data.py
robot_ws/src/comms/src/rcgcrrd/: conversion.py  robocup_game_control_robot_return_data.py
robot_ws/src/comms/src/rcgctd/: conversion.py  robocup_game_control_team_data.py
robot_ws/src/motion/motion_port/: CMakeLists.txt  README.md  package.xml
robot_ws/src/motion/motion_port/include/motion/: MotionDefs.hpp  MotionOdometry.cpp  MotionOdometry.hpp  SafetySkill.cpp  SafetySkill.hpp  motion_adapter.hpp
robot_ws/src/motion/motion_port/include/types/: AbsCoord.hpp  JointValues.hpp  MakeJointsIn.hpp  Odometry.hpp  RRCoord.hpp  SensorValues.hpp  XYZ_Coord.hpp
robot_ws/src/motion/motion_port/include/utils/: SPLDefs.hpp  Timer.cpp  Timer.hpp  angles.hpp  basic_maths.hpp  basic_onullstream.hpp  body.hpp  bodyV6.cpp  bodyV6.hpp  clip.hpp  matrix_helpers.hpp
robot_ws/src/motion/motion_port/launch/: motion_launch.py
robot_ws/src/motion/motion_port/scripts/: kick_calibration.cpp  kick_calibration_instructions.md  test_joints_movement_instructions.md  test_joints_movement_node.py
robot_ws/src/motion/motion_port/src/: motion_adapter.cpp
robot_ws/src/runswift_interfaces/: CMakeLists.txt  package.xml
robot_ws/src/runswift_interfaces/msg/: BehavioursGamestate.msg  BehavioursRobotInfo.msg  BodyCommand.msg  ButtonEvent.msg  CommsRCGCD.msg  CommsRCGCRD.msg  CommsRCGCRRD.msg  CommsRemainingPackets.msg  CommsRobotInfo.msg  CommsRobotPlayerInfo.msg  CommsTeamInfo.msg  CommsWhistle.msg  GlobalPoseObservation.msg  HeadCommand.msg  MotionCommand.msg  MotionOdometry.msg  RobotDetection.msg  SeBall.msg  SeBallsAbsolute.msg  SeBallsRelative.msg  SimulationRobotState.msg  SimulationState.msg  UnwrapFieldFeature.msg  UnwrapFieldFeatures.msg  VisionBallFeature.msg  VisionBalls.msg  VisionFieldFeature.msg  VisionFieldFeatures.msg  VisionImageWithFieldBoundry.msg  VisionObstacleFeature.msg  VisionObstacles.msg  VisionPipelineSwitchAsk.msg  VisionPipelineSwitchResult.msg  VisionProcessedImageData.msg
robot_ws/src/runswift_interfaces/srv/: BallCls.srv  BotModel.srv  DetectRobots.srv  FieldFeatureCls.srv
robot_ws/src/stateestimation/: CMakeLists.txt  Makefile  README.md  package.xml
robot_ws/src/stateestimation/include/stateestimation/: GameState.hpp  mathutils.hpp  types.hpp
robot_ws/src/stateestimation/launch/: stateestimation.launch.py  stateestimation.launch.xml
robot_ws/src/stateestimation/scripts/: feature_visualiser.py  field_visualiser.py
robot_ws/src/stateestimation/src/ball/: BallEstimator.cpp  BallKalmanFilter.cpp
robot_ws/src/stateestimation/src/self/: FieldFeatureLocations.cpp  FieldFeatureObservation.cpp  Localiser.cpp  SelfEstimator.cpp  SelfKalmanFilter.cpp
robot_ws/src/vision/: CMakeLists.txt  package.xml
robot_ws/src/vision/include/vision/: BallDetector.hpp  BottomSegmentation.hpp  Bottom_segmentation_service.hpp  Preprocessing.hpp  RobotDetector.hpp  TopCamCalib.hpp
robot_ws/src/vision/launch/: vision.launch.py  vision_cam_only.launch.py
robot_ws/src/vision/scripts/: ball_detector_model.py  bot_ray_pub.py  eye_leds_control.py  robot_detector_model.py  top_ray_pub.py  vision_debug_cca.py  vision_pipeline_switch_node.py
robot_ws/src/vision/src/: BallDetector.cpp  BottomSegmentation.cpp  CameraFlip.cpp  Preprocessing.cpp  RobotDetector.cpp
robot_ws/src/vision/src/unwrap/: CircleOnlyDetector.cpp  FeatureDetector.cpp  FieldTraceHelpers.cpp  Unwrap.cpp
robot_ws/src/vision/srv/: FieldFeatureCls.srv
utils/ros2-dump-to-bag/: .gitignore  Cargo.toml  README.md  build.rs  hex_dump_first_ros2bag_msg.sh  poc.ts
utils/ros2-dump-to-bag/src/: constants.rs  display_util.rs  main.rs  msgs.rs  reader_util.rs
utils/ros2-dump-to-bag/src/proto/: Blackboard.proto
utils/ros2-dump-to-bag/src/sql/: ros2bag_setup.sql
(+167 files in other folders)
