<?xml version="1.0"?>
<?xml-model 
  href="http://download.ros.org/schema/package_format3.xsd" 
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- Edit package configuration below -->
  <name>runswift_interfaces</name>
  <version>0.0.0</version>
  <description>As an interfaces to declare custom msgs, actions and srvs for other package to use.</description>
  <maintainer email="unswrobocup@gmail.com">rUNSWift</maintainer>
  <license>SEE LICENSE IN LICENSE</license>
  <!-- End package configuration customization -->

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>vision_msgs</build_depend>
  <exec_depend>vision_msgs</exec_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <!-- Add additional package.xml tags below -->

  <!-- End custom package.xml tags -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
